[package]
name = "apex_omega"
version = "87.0.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
ethers-flashbots = "0.14"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] } 
url = "2.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
petgraph = "0.6"
colored = "2.0"
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "apex_omega"
path = "main.rs"
