[package]
name = "apex-rust-singularity"
version = "206.5.0"
edition = "2021"

[dependencies]
# Alloy: High-performance successor to ethers-rs
alloy = { version = "1.0", features = ["full", "pubsub", "rpc-types-eth"] }
# REVM: The literal fastest EVM implementation (used by Reth/Foundry)
revm = { version = "8.0", features = ["std", "serde", "memory_db"] }
# Petgraph + Rayon: Parallel 12-hop graph search
petgraph = "0.6"
rayon = "1.9"
# Data Structures & Low-latency sync
dashmap = "5.5"
parking_lot = "0.12"
core_affinity = "0.8" 
tokio = { version = "1", features = ["full", "parking_lot"] }
vader-sentiment = "0.1.0"
dotenv = "0.15"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat" # Full link-time optimization
codegen_units = 1
panic = "abort"
